kermeta_projects/fr.irisa.triskell.kermeta.tests/test/io/constraintchecker_tests/invalid/025_weaving_in_kermeta_aspect09.kmt
/* $Id:$ 
 * Creation : May 31, 2010
 * Licence  : EPL 
 * Copyright:
 * Authors  : 
 *            dvojtise
 */
@mainClass "test::Main"
@mainOperation "main"

package test;

require kermeta
using kermeta::language::structure

aspect class A inherits B {

reference b : Object
}

class B {

reference b : Object

}

class Main {

 operation main() : Void is do
 	stdio.writeln("I love kermeta 1.2...")
 end

}
